2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx (const Array<T>&, ...)): 
	Optimize creation of result indices.
	* data.cc (Fsort): Ditto.

2010-02-09  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/colamd.cc (Fcolamd, Fsymamd, Fetree): Fix improper arg
	checks.
	* DLD-FUNCTIONS/ccolamd.cc (Fccolamd, Fcsymamd): Likewise.

2010-02-08  Jaroslav Hajek  <highegg@gmail.com>

	* ov-re-mat.cc (octave_matrix::sort): Special-case sorting a known
	index vector.

2010-02-08  John W. Eaton  <jwe@octave.org>

	* ov-class.cc (Fclass): If more than 1 argument, check that
	call is inside class constructor first, then check for valid
	arguments.

2010-02-05  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (F__accumarray_sum__): Allow bool and char inputs.
	(do_accumarray_minmax, do_accumarray_minmax_fun): New helper funcs.
	(F__accumarray_min__, F__accumarray_max__): New defuns.

2010-02-04  John W. Eaton  <jwe@octave.org>

	* sysdep.cc: Don't include <sys/utsname.h>.

2010-02-04  John W. Eaton  <jwe@octave.org>

	* graphics.h.in (gh_manager::lookup (const octave_value&)):
	New function.
	* graphics.cc (axes::properties::set_text_child): Validate value.
	Allow value to be character string or handle of text object.

2010-02-04  John W. Eaton  <jwe@octave.org>

	* Makefile.am (OCTAVE_LIBS): Include all liboctave library
	dependencies here.

2010-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* ov-fcn-handle.h (octave_fcn_handle::anonymous): New static field.
	* ov-fcn-handle.cc (octave_fcn_handle::anonymous): Initialize it.
	Use everywhere instead of hardwired string.
	(octave_fcn_handle::print_raw): Print named function handle with
	starting @.
	* pt-fcn-handle.cc: Use octave_fcn_handle::anonymous rather than
	hardcoded string.

2010-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-fcn.cc: New source.
	* OPERATORS/module.mk: Include it.

2010-02-03  John W. Eaton  <jwe@octave.org>
