@@ -1,3 +1,8 @@
+2010-02-09  John W. Eaton  <jwe@octave.org>
+
+	* dynamic-ld.cc (clear): Only warn if reloading a dynamically
+	linked file that defines multiple functions.
+
 2010-02-09  Jaroslav Hajek  <highegg@gmail.com>
 
 	* DLD-FUNCTIONS/find.cc (find_nonzero_elem_idx (const Array<T>&, ...)): 
